@@ -22,6 +22,9 @@ of the current archive period.
 Changed the null value from zero (which the Davis documentation specifies)
 to 0x7fff for the VP2 type 'highRadiation'.
 
+Archive record packets with date and time equal to zero or 0xff now
+terminate dumps.
+
 The code that picks a filename for "summary by" reports has now been
 factored out into a separate function (getSummaryByFileName). This
 allows the logic to be changed by subclassing.
